--- a/KalutClient/KalutClient/KalutClient.csproj
+++ b/KalutClient/KalutClient/KalutClient.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\MetroFramework.Fonts.1.2.0.3\lib\net40\MetroFramework.Fonts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,11 +69,19 @@
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Objects\KalutInfo.cs" />
+    <Compile Include="Objects\KalutQuestion.cs" />
+    <Compile Include="Objects\KalutQuiz.cs" />
     <Compile Include="PleaseWait.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PleaseWait.Designer.cs">
       <DependentUpon>PleaseWait.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuizEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuizEditor.Designer.cs">
+      <DependentUpon>QuizEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="QuizMakerForm.cs">
       <SubType>Form</SubType>
@@ -82,6 +94,9 @@
     </Compile>
     <Compile Include="QuizSelectionForm.Designer.cs">
       <DependentUpon>QuizSelectionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RefreshListBox.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="WelcomeScreen.cs">
       <SubType>Form</SubType>
@@ -96,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PleaseWait.resx">
       <DependentUpon>PleaseWait.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuizEditor.resx">
+      <DependentUpon>QuizEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QuizMakerForm.resx">
       <DependentUpon>QuizMakerForm.cs</DependentUpon>
