--- a/KalutClient/KalutClient/KalutClient.csproj
+++ b/KalutClient/KalutClient/KalutClient.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IronPython, Version=2.7.7.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
+    <Reference Include="IronPython.Modules, Version=2.7.7.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
+    <Reference Include="IronPython.SQLite, Version=2.7.7.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
+    <Reference Include="IronPython.Wpf, Version=2.7.7.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
     <Reference Include="MetroFramework, Version=1.2.0.3, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroFramework.RunTime.1.2.0.3\lib\net40-Client\MetroFramework.dll</HintPath>
       <Private>True</Private>
@@ -45,6 +49,7 @@
       <HintPath>..\packages\MetroFramework.Fonts.1.2.0.3\lib\net40\MetroFramework.Fonts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Scripting, Version=1.1.2.22, Culture=neutral, PublicKeyToken=7f709c5b713576e1" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -62,6 +67,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
+    <Compile Include="JoinKalutView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="JoinKalutView.Designer.cs">
+      <DependentUpon>JoinKalutView.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +88,12 @@
     <Compile Include="Objects\KalutInfo.cs" />
     <Compile Include="Objects\KalutQuestion.cs" />
     <Compile Include="Objects\KalutQuiz.cs" />
+    <Compile Include="PlayerViewHost.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlayerViewHost.Designer.cs">
+      <DependentUpon>PlayerViewHost.cs</DependentUpon>
+    </Compile>
     <Compile Include="PleaseWait.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,8 +118,11 @@
     <Compile Include="QuizSelectionForm.Designer.cs">
       <DependentUpon>QuizSelectionForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="RefreshListBox.cs">
-      <SubType>Component</SubType>
+    <Compile Include="WallViewHost.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WallViewHost.Designer.cs">
+      <DependentUpon>WallViewHost.cs</DependentUpon>
     </Compile>
     <Compile Include="WelcomeScreen.cs">
       <SubType>Form</SubType>
@@ -106,8 +132,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="JoinKalutView.resx">
+      <DependentUpon>JoinKalutView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlayerViewHost.resx">
+      <DependentUpon>PlayerViewHost.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PleaseWait.resx">
       <DependentUpon>PleaseWait.cs</DependentUpon>
@@ -120,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="QuizSelectionForm.resx">
       <DependentUpon>QuizSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WallViewHost.resx">
+      <DependentUpon>WallViewHost.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WelcomeScreen.resx">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
@@ -150,6 +188,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MetroFramework.txt" />
+    <None Include="Resources\ironpython-logo.png" />
+    <None Include="Resources\main-qimg-133cb67a060cbb79455b67bd45a6ea6a.png" />
+    <None Include="Resources\planq_logo1.png" />
     <None Include="Resources\rsz_player_copy.png" />
     <None Include="Resources\rsz_notepad.png" />
     <None Include="Resources\rsz_plus-512.png" />
