--- a/KalutClient/KalutClient/KalutClient.csproj
+++ b/KalutClient/KalutClient/KalutClient.csproj
@@ -52,8 +52,11 @@
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +66,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About.cs">
@@ -70,6 +76,18 @@
     </Compile>
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AnsweredView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AnsweredView.Designer.cs">
+      <DependentUpon>AnsweredView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AnswerQuestionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AnswerQuestionView.Designer.cs">
+      <DependentUpon>AnswerQuestionView.cs</DependentUpon>
     </Compile>
     <Compile Include="JoinKalutView.cs">
       <SubType>UserControl</SubType>
@@ -133,6 +151,12 @@
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AnsweredView.resx">
+      <DependentUpon>AnsweredView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AnswerQuestionView.resx">
+      <DependentUpon>AnswerQuestionView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="JoinKalutView.resx">
       <DependentUpon>JoinKalutView.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,6 +209,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="conn.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="MetroFramework.txt" />
     <None Include="Resources\ironpython-logo.png" />
     <None Include="Resources\main-qimg-133cb67a060cbb79455b67bd45a6ea6a.png" />
